--- a/scripts/termux-open.in
+++ b/scripts/termux-open.in
@@ -44,7 +44,7 @@ case "${TERMUX__USER_ID:-}" in ''|*[!0-9]*|0[0-9]*) TERMUX__USER_ID=0;; esac
 
 am broadcast --user "$TERMUX__USER_ID" \
 	-a $ACTION \
-	-n com.termux/com.termux.app.TermuxOpenReceiver \
+	-n com.etnvo1d.droiddev/com.etnvo1d.droiddev.app.TermuxOpenReceiver \
 	$EXTRAS \
 	-d "$FILE" \
 	> /dev/null
