--- a/scripts/termux-wake-lock.in
+++ b/scripts/termux-wake-lock.in
@@ -10,6 +10,6 @@ case "${TERMUX__USER_ID:-}" in ''|*[!0-9]*|0[0-9]*) TERMUX__USER_ID=0;; esac
 
 am startservice \
 	--user "$TERMUX__USER_ID" \
-	-a com.termux.service_wake_lock \
-	com.termux/com.termux.app.TermuxService \
+	-a com.etnvo1d.droiddev.service_wake_lock \
+	com.etnvo1d.droiddev/com.etnvo1d.droiddev.app.TermuxService \
 	> /dev/null
